<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_register"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.androidtemplate.user.RegisterActivity">

    <!-- 标题栏 -->
    <LinearLayout
        android:id="@+id/title_ll"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:orientation="horizontal"
        android:background="@color/mainBg">
        <TextView
            android:id="@+id/left_tv"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:textColor="@android:color/white"
            android:paddingLeft="10dp"
            android:gravity="center"
            android:drawableLeft="@drawable/back"
            android:drawablePadding="5dp"
            android:textSize="@dimen/text_small"
            android:text="@string/back_str"/>

        <TextView
            android:id="@+id/title_tv"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:textColor="@android:color/white"
            android:gravity="center"
            android:textSize="@dimen/text_common"
            android:text="@string/improve_information_str"/>

        <TextView
            android:id="@+id/right_tv"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:textColor="@android:color/white"
            android:paddingRight="10dp"
            android:gravity="center"
            android:textSize="@dimen/text_small"
            android:text="操作"
            android:visibility="invisible"/>
    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:id="@+id/content_ll"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="@dimen/padding_big"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="0dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:layout_weight="1">
                    <TextView
                        android:id="@+id/pic_add_tv"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:drawableLeft="@drawable/pic_add"
                        android:drawablePadding="@dimen/padding_small"
                        android:gravity=""
                        android:text="@string/select_image_str"/>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:layout_weight="1">
                    <TextView
                        android:id="@+id/pic_add2_tv"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:drawableLeft="@drawable/pic_add"
                        android:drawablePadding="@dimen/padding_small"
                        android:text="@string/take_photo_str"/>
                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/padding_common"
                android:gravity="center">
                <ImageView
                    android:id="@+id/img_iv"
                    android:layout_width="180dp"
                    android:layout_height="180dp"
                    android:visibility="gone"
                    />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/padding_common"
                android:orientation="vertical">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/username_str"/>
                <EditText
                    android:id="@+id/username_et"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/required_str"
                    android:enabled="false"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/padding_common"
                android:orientation="vertical">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/email_str"/>
                <EditText
                    android:id="@+id/email_et"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/padding_common"
                android:orientation="vertical">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/tel_str"/>
                <EditText
                    android:id="@+id/tel_et"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/padding_common"
                android:orientation="vertical">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="QQ："/>
                <EditText
                    android:id="@+id/qq_et"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/padding_common"
                android:orientation="vertical">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/wechat_str"/>
                <EditText
                    android:id="@+id/we_chat_et"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/padding_common"
                android:orientation="vertical">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/birthday_str"/>
                <EditText
                    android:id="@+id/birth_et"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/sex_str"/>
                <Spinner
                    android:id="@+id/sex_sp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:entries="@array/sex_array">
                </Spinner>
            </LinearLayout>

            <Button
                android:id="@+id/update_btn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/padding_common"
                android:layout_marginTop="20dp"
                android:text="@string/submit_str"
                android:textSize="@dimen/text_common"
                android:textColor="@android:color/white"
                android:background="@drawable/selector_button"/>
        </LinearLayout>
    </ScrollView>
</LinearLayout>
