<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <!-- 标题栏 -->
    <LinearLayout
        android:id="@+id/title_ll"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:orientation="horizontal"
        android:background="@color/mainBg">
        <TextView
            android:id="@+id/left_tv"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:textColor="@android:color/white"
            android:paddingLeft="10dp"
            android:gravity="center"
            android:drawableLeft="@drawable/back"
            android:drawablePadding="5dp"
            android:textSize="@dimen/text_small"
            android:text="返回"/>

        <TextView
            android:id="@+id/title_tv"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:textColor="@android:color/white"
            android:gravity="center"
            android:textSize="@dimen/text_common"
            android:text="@string/person_center_str"/>

        <TextView
            android:id="@+id/right_tv"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:textColor="@android:color/white"
            android:paddingRight="10dp"
            android:gravity="center"
            android:textSize="@dimen/text_small"
            android:text="操作"
            android:visibility="invisible"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/content_ll"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="@dimen/padding_big"
        android:orientation="vertical">

        <TextView
            android:id="@+id/user_update_tv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="@dimen/text_big"
            android:padding="@dimen/text_common"
            android:drawableRight="@drawable/arrow_right_gray"
            android:text="@string/improve_information_str"/>

        <TextView
            android:id="@+id/update_password_tv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="@dimen/text_big"
            android:padding="@dimen/text_common"
            android:drawableRight="@drawable/arrow_right_gray"
            android:text="@string/update_pass_str"/>

        <TextView
            android:id="@+id/logout_tv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="@dimen/text_big"
            android:padding="@dimen/text_common"
            android:drawableRight="@drawable/arrow_right_gray"
            android:text="@string/log_out_str"/>

        <TextView
            android:id="@+id/exit_tv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="@dimen/text_big"
            android:padding="@dimen/text_common"
            android:drawableRight="@drawable/arrow_right_gray"
            android:text="@string/exit_app_str"/>
    </LinearLayout>

</LinearLayout>
