<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_login"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.androidtemplate.user.LoginActivity">

    <!-- 标题栏 -->
    <LinearLayout
        android:id="@+id/title_ll"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:orientation="horizontal"
        android:background="@color/mainBg">
        <TextView
            android:id="@+id/left_tv"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:textColor="@android:color/white"
            android:paddingLeft="10dp"
            android:gravity="center"
            android:drawableLeft="@drawable/back"
            android:drawablePadding="5dp"
            android:textSize="@dimen/text_small"
            android:text="@string/back_str"/>

        <TextView
            android:id="@+id/title_tv"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:textColor="@android:color/white"
            android:gravity="center"
            android:textSize="@dimen/text_common"
            android:text="@string/login_str"/>

        <TextView
            android:id="@+id/right_tv"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:textColor="@android:color/white"
            android:paddingRight="10dp"
            android:gravity="center"
            android:textSize="@dimen/text_small"
            android:text="I P"
            android:visibility="visible"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/content_ll"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="@dimen/padding_big"
        android:orientation="vertical">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:src="@drawable/login"
            android:padding="10dp"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/padding_common"
            android:orientation="vertical">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/username_str"/>
            <EditText
                android:id="@+id/username_et"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/padding_common"
            android:orientation="vertical">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/pass_str"/>
            <EditText
                android:id="@+id/password_et"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"/>
        </LinearLayout>

        <CheckBox
            android:text="@string/remember_pass_str"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/checkBox"
            android:visibility="gone"/>

        <Switch
            android:text="@string/remember_pass_str"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@android:style/Theme.Holo.Light.NoActionBar"
            android:id="@+id/auto_login_sw"
            android:visibility="visible"/>

        <Button
            android:id="@+id/login_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/padding_common"
            android:layout_marginTop="20dp"
            android:text="@string/login_str"
            android:textSize="@dimen/text_common"
            android:textColor="@android:color/white"
            android:background="@drawable/selector_button"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/padding_big"
            android:orientation="horizontal">
            <TextView
                android:id="@+id/forget_pass_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="left"
                android:text="@string/forget_pass_str"
				android:visibility="invisible"
                android:textSize="@dimen/text_common"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"/>

            <TextView
                android:id="@+id/switch_fun_tv"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/no_account_get_one_str"
                android:textSize="@dimen/text_common"
                android:layout_gravity="right"/>
        </LinearLayout>

    </LinearLayout>


</LinearLayout>
